$Id$


v0.83.0		06-Nov-2005


v0.82.0		06-Oct-2005 - 06-Nov-2005

		This is a bugfix release for version 0.80.0.

        general:
                Made changes to structures and sources to make everything
                compatible between 32 and 64 bit systems. Special thanks to
		Alan Ianson and Robert Wolfe for testing the 64 bit versions.
                Added escaping in client/server comms. It is now allowed to
                use comma's in user names, locations etc.

        upgrade:
                The bbs menu Change Screenlength is obsolete. Remove this from
                the menus (setup.mnu) and ascii/ansi screens (setup.a??).
                Owners of 64 bits systems should check if all *.sts files in
                the outbound are 12 bytes log. If not, stop the whole bbs and
                remove all these files. Then start the bbs again.
		Owners of 64 bit systems that have run version 0.80.0 or older
		should really backup everything and be prepared that all data
		files are not compatible anymore. Blame the GNU people for
		changing the storage format for some variables.
		After upgrade databases are compatible between 32 and 64 bit
		systems.

        libmbse.a:
                Added clencode and cldecode to safe escape messages to mbtask.
                In nodelock show program name if node is already locked.

        mbcico:
                Made binkp GZ and BZ2 compression final.
                Fixed compile errors when both zlib and bzlib development
                packages are not installed on some distro's.

        mbfido:
                Fixed a segfault when tossing as a point echomail without a
                seen-by line.

        mbsebbs:
                Automatic dynamic detection of the users screensize.
                There is no check anymore for a valid tty with network calls,
                instead a fake ttyinfo record is created. Modem/ISDN and
                console still need a valid configured tty.